--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "typescript": "~3.6.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.10.1",
+    "@aws-cdk/aws-codedeploy": "^1.10.1",
+    "@aws-cdk/aws-lambda": "^1.10.1",
+    "@aws-cdk/aws-s3": "^1.10.1",
     "@aws-cdk/core": "^1.10.1",
     "source-map-support": "^0.5.9"
   }
